--- a/build.xml
+++ b/build.xml
@@ -1,31 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="TestBuild" default="build" basedir=".">
+<project name="easyXSS" default="build" basedir=".">
 	<property file="build.properties"/>
 	
 	<!-- Setup classpath for js-build-tools ant tasks -->
 	<path id="js-build-tasks.classpath">
 		<pathelement location="."/>
-
 		<fileset dir="tools\js-build-tools\lib">
 			<include name="**/*.jar"/>
 		</fileset>
 	</path>
-
-	<!-- Register new js-build-tools ant tasks -->
 	<taskdef name="preprocess" classname="com.moxiecode.ant.tasks.PreProcessTask" classpathref="js-build-tasks.classpath" loaderref="js-build-tasks.classpath.loader" />
 	<taskdef name="yuicompress" classname="com.moxiecode.ant.tasks.YuiCompressTask" classpathref="js-build-tasks.classpath" loaderref="js-build-tasks.classpath.loader" />
-	<!--<taskdef name="jsdoctoolkit" classname="uk.co.darrenhurley.ant.tasks.JsDocToolkit" classpath="tools\jsdoctoolkit-ant-task-1.0.1.jar;tools\jsdoc_toolkit-2.3.0\jsdoc-toolkit\java\classes\js.jar"/> -->
-	 
-	 
+	
 	<target name="clean" depends="" description="Cleans up the project from temporary files">
 		<delete dir="${project.build.dir}" quiet="true"/>
     </target>
-	<!-- Setup default build target -->
+	
 	<target name="build" depends="clean">
+		<buildnumber/>
 		<mkdir dir="${project.build.dir}"/>
 		<mkdir dir="${project.build.dir}\temp"/>
 		
-		<concat destfile="${project.build.dir}\temp\easyXSS.combined.js">
+		<concat destfile="${project.build.dir}\temp\easyXSS.combined.js">	
             <fileset dir="." includes="${project.src.dir}\easyXSS.js" />
             <fileset dir="." includes="${project.src.dir}\easyXSS.DomHelper.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXSS.Events.js" />
@@ -35,6 +31,9 @@
 			<fileset dir="." includes="${project.src.dir}\easyXSS.Serializing.js" />
         </concat>
 		
+		<replace file="${project.build.dir}\temp\easyXSS.combined.js"
+			token="%%version%%" value="1.2.0.${build.number}"/>
+
 		<!-- Run jslint -->
 		<java jar="tools\jslint4java-1.3.1\jslint4java-1.3.1.jar" fork="true" failonerror="true" maxmemory="128m" >
 			<arg value="${project.build.dir}\temp\easyXSS.combined.js"/>
@@ -70,6 +69,7 @@
 		
 		<copy todir="${project.build.dir}">
 			<fileset dir="${project.build.dir}\temp"/>
+			<fileset file= "${project.src.dir}\changes.txt"/>
 		</copy>
 		
 		<copy todir="${project.build.dir}\example">
@@ -78,4 +78,8 @@
 		<delete dir="${project.build.dir}\temp" quiet="true"/>
 	</target>
 	
+	<target name="package" depends="build">
+		<zip destfile="dist\${ant.project.name}.build-${build.number}.zip"
+       basedir="${project.build.dir}"/>
+	</target>
 </project>
