--- a/build.xml
+++ b/build.xml
@@ -70,6 +70,7 @@
 		<copy todir="${project.build.dir}">
 			<fileset dir="${project.build.dir}\temp"/>
 			<fileset file= "${project.src.dir}\changes.txt"/>
+			<fileset file= "tools\json2.js"/>
 		</copy>
 		
 		<copy todir="${project.build.dir}\example">
