Fixed a bug where the onReady handler for Channel was not passed on from createChannel Changed to using the 'new className' construct over 'createClassName' methods

--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,7 @@
             <fileset dir="." includes="${project.src.dir}\easyXSS.DomHelper.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXSS.Events.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXSS.Transport.js" />
-			<fileset dir="." includes="${project.src.dir}\easyXSS.Interface.js" />
+			<fileset dir="." includes="${project.src.dir}\easyXSS.Configuration.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXSS.Url.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXSS.Serializing.js" />
         </concat>
