--- a/build.xml
+++ b/build.xml
@@ -33,7 +33,7 @@
         </concat>
 	
 		<replace file="${project.build.dir}\temp\easyXDM.combined.js"
-			token="%%version%%" value="1.4.0.${build.number}"/>
+			token="%%version%%" value="1.5.0.${build.number}"/>
 
 		<!-- Run jslint -->
 		<java jar="tools\jslint4java-1.3.1\jslint4java-1.3.1.jar" fork="true" failonerror="true" maxmemory="128m" >
@@ -88,6 +88,6 @@
 	
 	<target name="package" depends="document">
 		<mkdir dir="dist"/>
-		<zip destfile="dist\${ant.project.name}.zip" basedir="${project.build.dir}"/>
+		<zip destfile="dist\${ant.project.name}-1.5.0.zip" basedir="${project.build.dir}"/>
 	</target>
 </project>
