Minor modifications to the build Fixed bug in the doc build

--- a/build.properties
+++ b/build.properties
@@ -7,7 +7,7 @@ project.description=easyXSS
 project.src.dir=src
 
 # Build & Release properties
-project.build.dir=build
+project.build.dir=bduild
 
 # Compiler properties
 build.compiler.fulldepend=true
