--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="easyXDM" default="build" basedir=".">
 	<property file="build.properties"/>
-	<property name="project.build.artifactdir" value="./artifacts/"/>
+	<property name="project.build.artifactdir" value=".\artifacts\"/>
 	<property name="project.build.version" value="1.5.0"/>
 	
 	<!-- Setup classpath for js-build-tools ant tasks -->
@@ -70,6 +70,8 @@
 		
 		<copy todir="${project.build.artifactdir}\v${project.build.version}">
 			<fileset dir="work"/>
+			<fileset file= "MIT-license.txt"/>
+			<fileset file= "README.txt"/>
 			<fileset file= "${project.src.dir}\changes.txt"/>
 			<fileset file= "tools\json2.js"/>
 			<fileset file= "tools\jquery-1.3.2.min.js"/>
@@ -78,7 +80,6 @@
 		<copy todir="${project.build.artifactdir}\v${project.build.version}\example">
 			<fileset dir="${project.src.dir}\example"/>
 		</copy>
-		<delete dir="work" quiet="true"/>
 	</target>
 	
 	<target name="document" depends="build">
