--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project name="easyXDM" default="build" basedir=".">
 	<property file="build.properties"/>
 	<property name="project.build.artifactdir" value=".\artifacts\"/>
-	<property name="project.build.version" value="1.5.2"/>
+	<property name="project.build.version" value="1.5.3"/>
 	
 	<!-- Setup classpath for js-build-tools ant tasks -->
 	<path id="js-build-tasks.classpath">
@@ -32,23 +32,28 @@
 			<fileset dir="." includes="${project.src.dir}\easyXDM.Url.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXDM.Serializing.js" />
         </concat>
-	
 		<replace file="work\easyXDM.combined.js"
 			token="%%version%%" value="${project.build.version}.${build.number}"/>
-
+        
 		<!-- Run jslint -->
 		<java jar="tools\jslint4java-1.3.1\jslint4java-1.3.1.jar" fork="true" failonerror="true" maxmemory="128m" >
 			<arg value="work\easyXDM.combined.js"/>
+        </java>
+		<java jar="tools\jslint4java-1.3.1\jslint4java-1.3.1.jar" fork="true" failonerror="true" maxmemory="128m" >
+			<arg value="${project.src.dir}\easyXDM.Widgets.js"/>
         </java>
 		
 		<!-- Process pre proccesing instructions like #if/#endif etc -->
 		<preprocess infile="work\easyXDM.combined.js" outfile="work\easyXDM.js"/>
 		<preprocess infile="work\easyXDM.combined.js" outfile="work\easyXDM.debug.js" defines="debug"/>
 	    <preprocess infile="${project.src.dir}\hash.html" outfile="work\hash.html"/>
-		
+		<preprocess infile="${project.src.dir}\easyXDM.Widgets.js" outfile="work\easyXDM.Widgets.js"/>
+		<preprocess infile="${project.src.dir}\easyXDM.Widgets.js" outfile="work\easyXDM.Widgets.debug.js" defines="debug"/>
+	    
 		
 		<!-- Compress the file using the YUI Compressor -->
 		<yuicompress infile="work\easyXDM.js" outfile="work\easyXDM.min.js" />
+		<yuicompress infile="${project.src.dir}\easyXDM.Widgets.js" outfile="work\easyXDM.Widgets.min.js" />
 		
 		<!-- concat header files -->
 		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.js">
@@ -63,10 +68,25 @@
             <fileset dir="." includes="${project.src.dir}\header.js" />
             <fileset dir="." includes="work\easyXDM.min.js" />
 		</concat>
+		
+		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.Widgets.js">
+            <fileset dir="." includes="${project.src.dir}\header.js" />
+            <fileset dir="." includes="work\easyXDM.Widgets.js" />
+		</concat>
+		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.Widgets.debug.js">
+            <fileset dir="." includes="${project.src.dir}\header.js" />
+            <fileset dir="." includes="work\easyXDM.Widgets.debug.js" />
+		</concat>
+		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.Widgets.min.js">
+            <fileset dir="." includes="${project.src.dir}\header.js" />
+            <fileset dir="." includes="work\easyXDM.Widgets.min.js" />
+		</concat>
+		
 		<concat destfile="${project.build.artifactdir}\v${project.build.version}\hash.html">
             <fileset dir="." includes="${project.src.dir}\header.html" />
             <fileset dir="." includes="work\hash.html" />
 		</concat>
+		
 		<delete file="work\easyXDM.combined.js" quiet="true"/>
 		
 		<copy todir="${project.build.artifactdir}\v${project.build.version}">
