--- a/build.xml
+++ b/build.xml
@@ -14,42 +14,41 @@
 	
 	<taskdef name="preprocess" classname="com.moxiecode.ant.tasks.PreProcessTask" classpathref="js-build-tasks.classpath" loaderref="js-build-tasks.classpath.loader" />
 	<taskdef name="yuicompress" classname="com.moxiecode.ant.tasks.YuiCompressTask" classpathref="js-build-tasks.classpath" loaderref="js-build-tasks.classpath.loader" />
-		
+	<taskdef name="jslint" classname="com.googlecode.jslint4java.ant.JSLintTask" classpath="tools\jslint4java-1.3.1/jslint4java-1.3.1.jar" />
+	
 	<target name="clean" depends="" description="Cleans up the project from temporary files">
 		<delete dir="work" quiet="true"/>
-    </target>
-	
-	<target name="build" depends="clean">
 		<delete dir="${project.build.artifactdir}\v${project.build.version}" quiet="true"/>
+	</target>
+	
+	<target name="jslint">
+		<jslint>
+			<fileset dir="${project.src.dir}" includes="easyXDM*.js"/>
+		</jslint>
+	</target>
+	
+	<target name="build" depends="clean,jslint">
 		<buildnumber/>
 		<mkdir dir="work"/>
 		
 		<concat destfile="work\easyXDM.combined.js">	
-            <fileset dir="." includes="${project.src.dir}\easyXDM.js" />
-            <fileset dir="." includes="${project.src.dir}\easyXDM.DomHelper.js" />
+			<fileset dir="." includes="${project.src.dir}\easyXDM.js" />
+			<fileset dir="." includes="${project.src.dir}\easyXDM.DomHelper.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXDM.Transport.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXDM.Configuration.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXDM.Url.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXDM.Serializing.js" />
-        </concat>
-		<replace file="work\easyXDM.combined.js"
-			token="%%version%%" value="${project.build.version}.${build.number}"/>
-        
-		<!-- Run jslint -->
-		<java jar="tools\jslint4java-1.3.1\jslint4java-1.3.1.jar" fork="true" failonerror="true" maxmemory="128m" >
-			<arg value="work\easyXDM.combined.js"/>
-        </java>
-		<java jar="tools\jslint4java-1.3.1\jslint4java-1.3.1.jar" fork="true" failonerror="true" maxmemory="128m" >
-			<arg value="${project.src.dir}\easyXDM.Widgets.js"/>
-        </java>
+		</concat>
+		
+		<replace file="work\easyXDM.combined.js" token="%%version%%" value="${project.build.version}.${build.number}"/>
 		
 		<!-- Process pre proccesing instructions like #if/#endif etc -->
 		<preprocess infile="work\easyXDM.combined.js" outfile="work\easyXDM.js"/>
 		<preprocess infile="work\easyXDM.combined.js" outfile="work\easyXDM.debug.js" defines="debug"/>
-	    <preprocess infile="${project.src.dir}\hash.html" outfile="work\hash.html"/>
+		<preprocess infile="work\easyXDM.combined.js" outfile="work\easyXDM.contracts.js" defines="contracts"/>
+		<preprocess infile="${project.src.dir}\hash.html" outfile="work\hash.html"/>
 		<preprocess infile="${project.src.dir}\easyXDM.Widgets.js" outfile="work\easyXDM.Widgets.js"/>
 		<preprocess infile="${project.src.dir}\easyXDM.Widgets.js" outfile="work\easyXDM.Widgets.debug.js" defines="debug"/>
-	    
 		
 		<!-- Compress the file using the YUI Compressor -->
 		<yuicompress infile="work\easyXDM.js" outfile="work\easyXDM.min.js" />
@@ -57,34 +56,34 @@
 		
 		<!-- concat header files -->
 		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.js">
-            <fileset dir="." includes="${project.src.dir}\header.js" />
-            <fileset dir="." includes="work\easyXDM.js" />
+			<fileset dir="." includes="${project.src.dir}\header.js" />
+			<fileset dir="." includes="work\easyXDM.js" />
 		</concat>
 		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.debug.js">
-            <fileset dir="." includes="${project.src.dir}\header.js" />
-            <fileset dir="." includes="work\easyXDM.debug.js" />
+			<fileset dir="." includes="${project.src.dir}\header.js" />
+			<fileset dir="." includes="work\easyXDM.debug.js" />
 		</concat>
 		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.min.js">
-            <fileset dir="." includes="${project.src.dir}\header.js" />
-            <fileset dir="." includes="work\easyXDM.min.js" />
+			<fileset dir="." includes="${project.src.dir}\header.js" />
+			<fileset dir="." includes="work\easyXDM.min.js" />
 		</concat>
 		
 		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.Widgets.js">
-            <fileset dir="." includes="${project.src.dir}\header.js" />
-            <fileset dir="." includes="work\easyXDM.Widgets.js" />
+			<fileset dir="." includes="${project.src.dir}\header.js" />
+			<fileset dir="." includes="work\easyXDM.Widgets.js" />
 		</concat>
 		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.Widgets.debug.js">
-            <fileset dir="." includes="${project.src.dir}\header.js" />
-            <fileset dir="." includes="work\easyXDM.Widgets.debug.js" />
+			<fileset dir="." includes="${project.src.dir}\header.js" />
+			<fileset dir="." includes="work\easyXDM.Widgets.debug.js" />
 		</concat>
 		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.Widgets.min.js">
-            <fileset dir="." includes="${project.src.dir}\header.js" />
-            <fileset dir="." includes="work\easyXDM.Widgets.min.js" />
+			<fileset dir="." includes="${project.src.dir}\header.js" />
+			<fileset dir="." includes="work\easyXDM.Widgets.min.js" />
 		</concat>
 		
 		<concat destfile="${project.build.artifactdir}\v${project.build.version}\hash.html">
-            <fileset dir="." includes="${project.src.dir}\header.html" />
-            <fileset dir="." includes="work\hash.html" />
+			<fileset dir="." includes="${project.src.dir}\header.html" />
+			<fileset dir="." includes="work\hash.html" />
 		</concat>
 		
 		<delete file="work\easyXDM.combined.js" quiet="true"/>
@@ -109,7 +108,7 @@
 		<delete dir="${project.build.artifactdir}\v${project.build.version}-docs" quiet="true"/>
 		<java jar="tools\ext-doc-1.0.131\ext-doc.jar" fork="true" failonerror="true" maxmemory="128m" >
 			<arg line="-p docs.xml -o ${project.build.artifactdir}\v${project.build.version}-docs -t tools\ext-doc-1.0.131\template\ext\template.xml"/>
-        </java>
+		</java>
 	</target>
 	
 	<target name="package" depends="document">
