Fixed a jslint error

--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,7 @@
 	
 	<target name="jslint">
 		<jslint>
+			<formatter type="plain" />
 			<fileset dir="${project.src.dir}" includes="easyXDM*.js"/>
 		</jslint>
 	</target>
