--- a/build.xml
+++ b/build.xml
@@ -36,7 +36,10 @@
 		<concat destfile="work\easyXDM.combined.js">	
 			<fileset dir="." includes="${project.src.dir}\easyXDM.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXDM.DomHelper.js" />
-			<fileset dir="." includes="${project.src.dir}\easyXDM.Transport.js" />
+			<fileset dir="." includes="${project.src.dir}\easyXDM.transport.HashTransport.js" />
+			<fileset dir="." includes="${project.src.dir}\easyXDM.transport.PostMessageTransport.js" />
+			<fileset dir="." includes="${project.src.dir}\easyXDM.transport.NameTransport.js" />
+			<fileset dir="." includes="${project.src.dir}\easyXDM.transport.BestAvailableTransport.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXDM.Configuration.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXDM.Url.js" />
 			<fileset dir="." includes="${project.src.dir}\easyXDM.Serializing.js" />
