--- a/build.xml
+++ b/build.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="easyXDM" default="build" basedir=".">
 	<property file="build.properties"/>
-	<property name="project.build.artifactdir" value=".\artifacts\"/>
-	<property name="project.build.publishdir" value=".\artifacts\"/>
-	<property name="project.build.version" value="1.8.1"/>
+	<property name="project.build.artifactdir" value="./artifacts/"/>
+	<property name="project.build.publishdir" value="./artifacts/"/>
+	<property name="project.build.version" value="1.8.0"/>
 	
 	<!-- Setup classpath for js-build-tools ant tasks -->
 	<path id="js-build-tasks.classpath">
 		<pathelement location="."/>
-		<fileset dir="tools\js-build-tools\lib">
+		<fileset dir="tools/js-build-tools/lib">
 			<include name="**/*.jar"/>
 		</fileset>
 	</path>
 	
 	<taskdef name="preprocess" classname="com.moxiecode.ant.tasks.PreProcessTask" classpathref="js-build-tasks.classpath" loaderref="js-build-tasks.classpath.loader" />
 	<taskdef name="yuicompress" classname="com.moxiecode.ant.tasks.YuiCompressTask" classpathref="js-build-tasks.classpath" loaderref="js-build-tasks.classpath.loader" />
-	<taskdef name="jslint" classname="com.googlecode.jslint4java.ant.JSLintTask" classpath="tools\jslint4java-1.3.1/jslint4java-1.3.1.jar" />
+	<taskdef name="jslint" classname="com.googlecode.jslint4java.ant.JSLintTask" classpath="tools/jslint4java-1.3.1/jslint4java-1.3.1.jar" />
 	
 	<target name="clean" depends="" description="Cleans up the project from temporary files">
 		<delete dir="work" quiet="true"/>
-		<delete dir="${project.build.artifactdir}\v${project.build.version}" quiet="true"/>
+		<delete dir="${project.build.artifactdir}/v${project.build.version}" quiet="true"/>
 	</target>
 	
 	<target name="jslint">
@@ -33,33 +33,36 @@
 		<buildnumber/>
 		<mkdir dir="work"/>
 		
-		<concat destfile="work\easyXDM.combined.js">	
-			<fileset dir="." includes="${project.src.dir}\easyXDM.js" />
-			<fileset dir="." includes="${project.src.dir}\easyXDM.DomHelper.js" />
-			<fileset dir="." includes="${project.src.dir}\easyXDM.transport.js" />
-			<fileset dir="." includes="${project.src.dir}\easyXDM.transport.HashTransport.js" />
-			<fileset dir="." includes="${project.src.dir}\easyXDM.transport.PostMessageTransport.js" />
-			<fileset dir="." includes="${project.src.dir}\easyXDM.transport.NameTransport.js" />
-			<fileset dir="." includes="${project.src.dir}\easyXDM.transport.BestAvailableTransport.js" />
-			<fileset dir="." includes="${project.src.dir}\easyXDM.Configuration.js" />
-			<fileset dir="." includes="${project.src.dir}\easyXDM.Url.js" />
-			<fileset dir="." includes="${project.src.dir}\easyXDM.Serializing.js" />
+		<concat destfile="work/easyXDM.combined.js">	
+			<fileset dir="." includes="${project.src.dir}/easyXDM.js" />
+			<fileset dir="." includes="${project.src.dir}/Debug.js" />
+			<fileset dir="." includes="${project.src.dir}/Configuration.js" />
+			<fileset dir="." includes="${project.src.dir}/DomHelper.js" />
+			<fileset dir="." includes="${project.src.dir}/Url.js" />
+			<fileset dir="." includes="${project.src.dir}/Transport.js" />
+			<fileset dir="." includes="${project.src.dir}/Rpc.js" />
+			<fileset dir="." includes="${project.src.dir}/stack/PostMessageTransport.js" />
+			<fileset dir="." includes="${project.src.dir}/stack/NameTransport.js" />
+			<fileset dir="." includes="${project.src.dir}/stack/HashTransport.js" />
+			<fileset dir="." includes="${project.src.dir}/stack/ReliableBehavior.js" />
+			<fileset dir="." includes="${project.src.dir}/stack/QueueBehavior.js" />
+			<fileset dir="." includes="${project.src.dir}/stack/VerifyBehavior.js" />
+			<fileset dir="." includes="${project.src.dir}/stack/RpcBehavior.js" />
 		</concat>
 		
-		<replace file="work\easyXDM.combined.js" token="%%version%%" value="${project.build.version}.${build.number}"/>
+		<replace file="work/easyXDM.combined.js" token="%%version%%" value="${project.build.version}.${build.number}"/>
 		
 		<!-- Process pre proccesing instructions like #if/#endif etc -->
 		<preprocess infile="work/easyXDM.combined.js" outfile="work/easyXDM.js"/>
 		<preprocess infile="work/easyXDM.combined.js" outfile="work/easyXDM.debug.js" defines="debug"/>
 		<preprocess infile="work/easyXDM.combined.js" outfile="work/easyXDM.contracts.js" defines="contracts"/>
 		<preprocess infile="${project.src.dir}/hash.html" outfile="work/hash.html"/>
-		<preprocess infile="${project.src.dir}/xhr.html" outfile="work/xhr.html"/>
-		<preprocess infile="${project.src.dir}/easyXDM.Widgets.js" outfile="work/easyXDM.Widgets.js"/>
-		<preprocess infile="${project.src.dir}/easyXDM.Widgets.js" outfile="work/easyXDM.Widgets.debug.js" defines="debug"/>
+		<preprocess infile="${project.src.dir}/widgets/Widgets.js" outfile="work/easyXDM.Widgets.js"/>
+		<preprocess infile="${project.src.dir}/widgets/Widgets.js" outfile="work/easyXDM.Widgets.debug.js" defines="debug"/>
 		
 		<!-- Compress the file using the YUI Compressor -->
 		<yuicompress infile="work/easyXDM.js" outfile="work/easyXDM.min.js" />
-		<yuicompress infile="${project.src.dir}/easyXDM.Widgets.js" outfile="work/easyXDM.Widgets.min.js" />
+		<yuicompress infile="${project.src.dir}/widgets/Widgets.js" outfile="work/easyXDM.Widgets.min.js" />
 		
 		<!-- concat header files -->
 		<concat destfile="${project.build.artifactdir}/v${project.build.version}/easyXDM.js">
@@ -75,61 +78,61 @@
 			<fileset dir="." includes="work/easyXDM.min.js" />
 		</concat>
 		
-		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.Widgets.js">
-			<fileset dir="." includes="${project.src.dir}\header.js" />
-			<fileset dir="." includes="work\easyXDM.Widgets.js" />
+		<concat destfile="${project.build.artifactdir}/v${project.build.version}/easyXDM.Widgets.js">
+			<fileset dir="." includes="${project.src.dir}/header.js" />
+			<fileset dir="." includes="work/easyXDM.Widgets.js" />
 		</concat>
-		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.Widgets.debug.js">
-			<fileset dir="." includes="${project.src.dir}\header.js" />
-			<fileset dir="." includes="work\easyXDM.Widgets.debug.js" />
+		<concat destfile="${project.build.artifactdir}/v${project.build.version}/easyXDM.Widgets.debug.js">
+			<fileset dir="." includes="${project.src.dir}/header.js" />
+			<fileset dir="." includes="work/easyXDM.Widgets.debug.js" />
 		</concat>
-		<concat destfile="${project.build.artifactdir}\v${project.build.version}\easyXDM.Widgets.min.js">
-			<fileset dir="." includes="${project.src.dir}\header.js" />
-			<fileset dir="." includes="work\easyXDM.Widgets.min.js" />
+		<concat destfile="${project.build.artifactdir}/v${project.build.version}/easyXDM.Widgets.min.js">
+			<fileset dir="." includes="${project.src.dir}/header.js" />
+			<fileset dir="." includes="work/easyXDM.Widgets.min.js" />
 		</concat>
 		
-		<delete file="work\easyXDM.combined.js" quiet="true"/>
+		<delete file="work/easyXDM.combined.js" quiet="true"/>
 		
-		<copy todir="${project.build.artifactdir}\v${project.build.version}">
+		<copy todir="${project.build.artifactdir}/v${project.build.version}">
 			<fileset dir="work"/>
 			<fileset file= "MIT-license.txt"/>
 			<fileset file= "README.txt"/>
-			<fileset file= "${project.src.dir}\changes.txt"/>
-			<fileset file= "tools\json2.js"/>
+			<fileset file= "${project.src.dir}/changes.txt"/>
+			<fileset file= "tools/json2.js"/>
 		</copy>
 		
-		<copy todir="${project.build.artifactdir}\v${project.build.version}\example">
-			<fileset dir="${project.src.dir}\example"/>
+		<copy todir="${project.build.artifactdir}/v${project.build.version}/example">
+			<fileset dir="${project.src.dir}/example"/>
 		</copy>
-		<copy todir="${project.build.artifactdir}\v${project.build.version}\tests">
-			<fileset dir="${project.src.dir}\tests"/>
+		<copy todir="${project.build.artifactdir}/v${project.build.version}/tests">
+			<fileset dir="${project.src.dir}/tests"/>
 		</copy>	
 	</target>
 	
 	<target name="document" depends="build">
-		<delete dir="${project.build.artifactdir}\v${project.build.version}-docs" quiet="true"/>
-		<java jar="tools\ext-doc-1.0.131\ext-doc.jar" fork="true" failonerror="true" maxmemory="128m" >
-			<arg line="-p docs.xml -o ${project.build.artifactdir}\v${project.build.version}-docs -t tools\ext-doc-1.0.131\template\ext\template.xml"/>
+		<delete dir="${project.build.artifactdir}/v${project.build.version}-docs" quiet="true"/>
+		<java jar="tools/ext-doc-1.0.131/ext-doc.jar" fork="true" failonerror="true" maxmemory="128m" >
+			<arg line="-p docs.xml -o ${project.build.artifactdir}/v${project.build.version}-docs -t tools/ext-doc-1.0.131/template/ext/template.xml"/>
 		</java>
 	</target>
 	
 	<target name="package" depends="document">
-		<zip destfile="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}.zip" basedir="${project.build.artifactdir}\v${project.build.version}"/>
-		<zip destfile="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}-docs.zip" basedir="${project.build.artifactdir}\v${project.build.version}-docs"/>
+		<zip destfile="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}.zip" basedir="${project.build.artifactdir}/v${project.build.version}"/>
+		<zip destfile="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}-docs.zip" basedir="${project.build.artifactdir}/v${project.build.version}-docs"/>
 	</target>
 	
 	<target name="publish" depends="package">
-		<delete dir="${project.build.publishdir}\dev\" quiet="true" />
-		<copy todir="${project.build.publishdir}\dev\">
-			<fileset dir="${project.build.artifactdir}\v${project.build.version}"/>
+		<delete dir="${project.build.publishdir}/dev/" quiet="true" />
+		<copy todir="${project.build.publishdir}/dev/">
+			<fileset dir="${project.build.artifactdir}/v${project.build.version}"/>
 		</copy>	
-		<copy todir="${project.build.publishdir}\v${project.build.version}">
-			<fileset dir="${project.build.artifactdir}\v${project.build.version}"/>
+		<copy todir="${project.build.publishdir}/v${project.build.version}">
+			<fileset dir="${project.build.artifactdir}/v${project.build.version}"/>
 		</copy>	
-		<copy todir="${project.build.publishdir}\v${project.build.version}\docs\">
-			<fileset dir="${project.build.artifactdir}\v${project.build.version}-docs"/>
+		<copy todir="${project.build.publishdir}/v${project.build.version}/docs/">
+			<fileset dir="${project.build.artifactdir}/v${project.build.version}-docs"/>
 		</copy>
-		<copy file="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}.zip" tofile="${project.build.publishdir}\v${project.build.version}\source.zip" />
-		<copy file="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}-docs.zip" tofile="${project.build.publishdir}\v${project.build.version}\docs.zip" />
+		<copy file="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}.zip" tofile="${project.build.publishdir}/v${project.build.version}/source.zip" />
+		<copy file="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}-docs.zip" tofile="${project.build.publishdir}/v${project.build.version}/docs.zip" />
 	</target>
 </project>
