--- a/build.xml
+++ b/build.xml
@@ -40,7 +40,7 @@
 			<fileset dir="." includes="${project.src.dir}/DomHelper.js" />
 			<fileset dir="." includes="${project.src.dir}/Fn.js" />
 			<fileset dir="." includes="${project.src.dir}/Url.js" />
-			<fileset dir="." includes="${project.src.dir}/Transport.js" />
+			<fileset dir="." includes="${project.src.dir}/Socket.js" />
 			<fileset dir="." includes="${project.src.dir}/Rpc.js" />
 			<fileset dir="." includes="${project.src.dir}/stack/PostMessageTransport.js" />
 			<fileset dir="." includes="${project.src.dir}/stack/NameTransport.js" />
