Added a publishtoweb target

--- a/build.xml
+++ b/build.xml
@@ -136,4 +136,17 @@
 		<copy file="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}.zip" tofile="${project.build.publishdir}/dev/source.zip" />
 		<copy file="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}-docs.zip" tofile="${project.build.publishdir}/dev/docs.zip" />
 	</target>
+	
+	<target name="publishtoweb" depends="package">
+		<delete dir="${project.build.publishdir}v${project.build.version}" quiet="true" />
+		<copy todir="${project.build.publishdir}v${project.build.version}">
+			<fileset dir="${project.build.artifactdir}v${project.build.version}"/>
+		</copy>	
+		<copy todir="${project.build.publishdir}v${project.build.version}/docs/">
+			<fileset dir="${project.build.artifactdir}v${project.build.version}-docs"/>
+		</copy>
+		<copy file="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}.zip" tofile="${project.build.publishdir}v${project.build.version}/source.zip" />
+		<copy file="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}-docs.zip" tofile="${project.build.publishdir}v${project.build.version}/docs.zip" />
+	</target>
+	
 </project>
