--- a/build.xml
+++ b/build.xml
@@ -42,6 +42,7 @@
 			<fileset dir="." includes="${project.src.dir}/Socket.js" />
 			<fileset dir="." includes="${project.src.dir}/Rpc.js" />
 			<fileset dir="." includes="${project.src.dir}/stack/PostMessageTransport.js" />
+			<fileset dir="." includes="${project.src.dir}/stack/NixTransport.js" />
 			<fileset dir="." includes="${project.src.dir}/stack/NameTransport.js" />
 			<fileset dir="." includes="${project.src.dir}/stack/HashTransport.js" />
 			<fileset dir="." includes="${project.src.dir}/stack/ReliableBehavior.js" />
