--- a/build.xml
+++ b/build.xml
@@ -26,6 +26,7 @@
 		<jslint>
 			<formatter type="plain" />
 			<fileset dir="${project.src.dir}" includes="easyXDM*.js"/>
+			<fileset dir="${project.src.dir}/stack/" includes="*.js"/>
 		</jslint>
 	</target>
 	
