--- a/build.xml
+++ b/build.xml
@@ -42,7 +42,9 @@
 			<fileset dir="." includes="${project.src.dir}/Fn.js" />
 			<fileset dir="." includes="${project.src.dir}/Socket.js" />
 			<fileset dir="." includes="${project.src.dir}/Rpc.js" />
+			<fileset dir="." includes="${project.src.dir}/stack/SameOriginTransport.js" />
 			<fileset dir="." includes="${project.src.dir}/stack/PostMessageTransport.js" />
+			<fileset dir="." includes="${project.src.dir}/stack/FrameElementTransport.js" />
 			<fileset dir="." includes="${project.src.dir}/stack/NixTransport.js" />
 			<fileset dir="." includes="${project.src.dir}/stack/NameTransport.js" />
 			<fileset dir="." includes="${project.src.dir}/stack/HashTransport.js" />
