Renamed the uncompiled easyXDM.js into Core.js

--- a/build.xml
+++ b/build.xml
@@ -36,7 +36,7 @@
 		
 		<concat destfile="work/easyXDM.combined.js">	
 			<fileset dir="." includes="${project.src.dir}/begin_scope.txt" />
-			<fileset dir="." includes="${project.src.dir}/easyXDM.js" />
+			<fileset dir="." includes="${project.src.dir}/Core.js" />
 			<fileset dir="." includes="${project.src.dir}/Debug.js" />
 			<fileset dir="." includes="${project.src.dir}/DomHelper.js" />
 			<fileset dir="." includes="${project.src.dir}/Fn.js" />
