Modified the build setup, ant will now upload a new version to GitHub automatically

--- a/build.properties
+++ b/build.properties
@@ -12,3 +12,7 @@ project.build.dir=bduild
 # Compiler properties
 build.compiler.fulldepend=true
 #build.compiler=jikes
+
+github.user = oyvindkinsey
+github.repo = easyXDM
+github.username = oyvindkinsey
