--- a/build.xml
+++ b/build.xml
@@ -16,6 +16,7 @@
 	
 	<taskdef name="preprocess" classname="com.moxiecode.ant.tasks.PreProcessTask" classpathref="js-build-tasks.classpath" loaderref="js-build-tasks.classpath.loader" />
 	<taskdef name="yuicompress" classname="com.moxiecode.ant.tasks.YuiCompressTask" classpathref="js-build-tasks.classpath" loaderref="js-build-tasks.classpath.loader" />
+	<taskdef name="moxiedoc" classname="com.moxiecode.ant.tasks.MoxieDocTask" classpathref="tasks.classpath" loaderref="js-build-tasks.classpath.loader" />
 	<taskdef name="jslint" classname="com.googlecode.jslint4java.ant.JSLintTask" classpath="tools/jslint4java-1.3.3/jslint4java-1.3.3.jar" />
 	
 	<path id="githubhuploadtask.classpath">
@@ -123,12 +124,13 @@
 		</copy>	
 	</target>
 	
-	<target name="document" depends="build">
+	<target name="document" depends="">
 		<delete dir="${project.build.artifactdir}v${project.build.version}-docs" quiet="true"/>
-		<java jar="tools/ext-doc/ext-doc.jar" fork="true" failonerror="true" maxmemory="128m" >
-			<arg line="-p docs.xml -o ${project.build.artifactdir}v${project.build.version}-docs -t tools/ext-doc/template/ext/template.xml"/>
-		</java>
-		<replace file="${project.build.artifactdir}v${project.build.version}-docs/index.html" token="%%version%%" value="${project.build.version}.${build.number}"/>
+		<moxiedoc outdir="docs" msintellisense="docs\model.js" templatedir="tools\js-build-tools\templates">
+			<fileset dir="work">
+				<include name="easyXDM.debug.js" /> 
+			</fileset>
+		</moxiedoc>
 	</target>
 	
 	<target name="package" depends="build">
