--- a/build.xml
+++ b/build.xml
@@ -113,7 +113,11 @@
 			<fileset file= "${project.src.dir}/changes.txt"/>
 			<fileset file= "tools/json2.js"/>
 		</copy>
-		
+
+		<copy todir="${project.src.dir}/tests">
+			<fileset file="work/easyXDM.debug.js"/>
+		</copy>
+
 		<copy todir="${project.build.artifactdir}v${project.build.version}/example">
 			<fileset dir="${project.src.dir}/example"/>
 		</copy>
