--- a/build.xml
+++ b/build.xml
@@ -144,14 +144,13 @@
 	</target>
 	
 	<target name="publish" depends="document, package">
-		<delete dir="${project.build.publishdir}/" quiet="true" />
-		<copy todir="${project.build.publishdir}/">
+		<delete dir="${project.build.publishdir}v${project.build.version}" quiet="true" />
+		<copy todir="${project.build.publishdir}v${project.build.version}">
 			<fileset dir="${project.build.artifactdir}v${project.build.version}"/>
 		</copy>	
-		<copy todir="${project.build.publishdir}/docs/">
+		<copy todir="${project.build.publishdir}v${project.build.version}/docs/">
 			<fileset dir="${project.build.artifactdir}v${project.build.version}-docs"/>
 		</copy>
-		<copy file="${project.build.artifactdir}${ant.project.name}-${project.build.version}.${build.number}.zip" tofile="${project.build.publishdir}/source.zip" />
 	</target>
 	
 	<target name="publishtoweb" depends="package, document">
